# ubi_reader

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  blocker.py  create_build_script.py  create_ubinize_ini.py  display_info.py  extract_files.py  extract_images.py  pyproject.toml  settings.py  setup.py  ubi_extract.py  ubi_extract_files.py  ubi_extract_ubifs.py  ubi_info.py  ubi_utils_info.py  ubifs_extract.py  ubifs_extract_files.py  ubifs_info.py  ubireader_extract_images  ui_common.py  vulture_whitelist.py
.github/: FUNDING.yml
.github/workflows/: release.yml
modules/: settings.py  utils.py
modules/debug/: __init__.py
modules/ubi/: __init__.py  defines.py  display.py  image.py
modules/ubi/block/: __init__.py  layout.py  sort.py
modules/ubi/headers/: __init__.py
modules/ubi/image/: __init__.py
modules/ubi/volume/: __init__.py
modules/ubi_io/: __init__.py
modules/ubifs/: __init__.py  display.py  log.py  misc.py  output.py  walk.py
modules/ubifs/nodes/: __init__.py
scripts/: ubireader_display_blocks  ubireader_display_info  ubireader_extract_files  ubireader_extract_images  ubireader_list_files  ubireader_utils_info
tools/: README.md  extract_blocks.py  extract_data.py  extract_data_monolith.py  extract_data_node.py  extract_freshest_lebs.py  list_vtbl_blocks.py  override.ini  rm_oob.py  split_by_volume.py  split_by_volume_peb.py
ubi/: __init__.py  defines.py  display.py  image.py
ubi/block/: __init__.py  layout.py  sort.py
ubi/headers/: __init__.py  errors.py
ubi/volume/: __init__.py
ubi_io/: __init__.py
ubifs/: __init__.py  defines.py  extract.py  log.py  misc.py  output.py  walk.py
ubifs/nodes/: __init__.py  extract.py
ubireader/: __main__.py  debug.py  exceptions.py  overrides.py  settings.py  ubi_io.py  utils.py
ubireader/debug/: __init__.py
ubireader/parsers/: __init__.py  display_blocks.py  display_info.py  extract_files.py  extract_images.py  list_files.py  utils_info.py
ubireader/scripts/: display_blocks.py  display_info.py  extract_files.py  extract_images.py  list_files.py  ubireader_display_blocks.py  ubireader_display_info.py  ubireader_extract_files.py  ubireader_extract_images.py  ubireader_list_files.py  ubireader_utils_info.py  utils_info.py
ubireader/ubi/: __init__.py  defines.py  display.py  headers.py  image.py  volume.py
ubireader/ubi/block/: __init__.py  layout.py  sort.py
ubireader/ubi/headers/: __init__.py
ubireader/ubi/volume/: __init__.py
ubireader/ubi_io/: __init__.py
ubireader/ubifs/: __init__.py  decrypt.py  defines.py  display.py  list.py  misc.py  nodes.py  output.py  walk.py
ubireader/ubifs/nodes/: __init__.py
ui/: common.py
