[project]
name = "ubi-reader"
version = "0.8.12"
description = "Extract files from UBI and UBIFS images."
authors = [{ name = "ONEKEY", email = "support@onekey.com" }, { name = "Jason Pruitt", email = "jrspruitt@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "cryptography>=44.0.2",
    "lzallright>=0.2.1",
]

[project.scripts]
ubireader_display_blocks = "ubireader.scripts.ubireader_display_blocks:main"
ubireader_display_info = "ubireader.scripts.ubireader_display_info:main"
ubireader_extract_files = "ubireader.scripts.ubireader_extract_files:main"
ubireader_extract_images = "ubireader.scripts.ubireader_extract_images:main"
ubireader_list_files = "ubireader.scripts.ubireader_list_files:main"
ubireader_utils_info = "ubireader.scripts.ubireader_utils_info:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "ubireader/*.py",
]

[tool.hatch.build.targets.wheel]
packages = ["ubireader"]

[tool.pytest.ini_options]
addopts = "--cov=ubi_reader --cov=tests --cov-branch --cov-fail-under=90"
norecursedirs = """
  *.egg
  *_extract
  .*
  dist
  build
  target
"""

[tool.vulture]
paths = ["ubireader/", "scripts/", "vulture_whitelist.py"]

[tool.pyright]
exclude = ["build"]
